# glitch

./: .env.example  .gitignore  CONTEXT.md  HERMES.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/adr/: 0001-product-identity.md  0002-voice-first-browser-mvp.md  0003-pet-state-and-persistence.md  README.md
docs/plans/: 2026-06-29-chip-mvp.md  2026-06-29-glitch-mvp.md  2026-07-02-droid-chirps-idle-audio.md
research/: LINKS.md  README.md
research/deep-research/2026-06-29-chip-cyber-pet/: deep-dive.md  executive-summary.md  key-players.md  open-questions.md
research/deep-research/2026-06-29-glitch-cyber-pet/: deep-dive.md  executive-summary.md  key-players.md  open-questions.md
research/github-projects/: happymonkeyai-motion-aware-voice-chat-bot.md  happymonkeyai-voice-assistant.md
research/notes/: chip-cyber-pet-deep-research.md  competitor-pages.json  devto-full-articles.json  glitch-cyber-pet-deep-research.md  mcp-research-raw.json  product-positioning.md
research/templates/: project-note.md
src/: __init__.py  index.html  main.py  pet_state.py  responses.py
tests/: test_main.py  test_pet_state.py  test_responses.py
